tests/fail/break_out_of_while.tig
let
    var i := 0
in
    while i < 1 do if i = 0 then i := i + 1;
    break
end
